FIX: login with tag and avatar on mobile

--- a/src/components/BillboardNftImage/BillboardNftImage.scss
+++ b/src/components/BillboardNftImage/BillboardNftImage.scss
@@ -69,6 +69,12 @@
 
 @media only screen and (max-width: 991px) {
   .nft-image-container {
+    .svg-container {
+      .nft-image {
+        border-radius: 5px;
+      }
+    }
+
     &.selected {
       box-shadow: 0px 0px 0px 1px #1DA1F2 !important;
     }
