--- a/src/components/MyNFT/MyNFT.scss
+++ b/src/components/MyNFT/MyNFT.scss
@@ -63,7 +63,7 @@
     .nft-container {
       border: none;
       border-radius: 5px;
-      box-shadow: 0px 0px 0px 1px #ffffff;
+      // box-shadow: 0px 0px 0px 1px #ffffff;
       width: 100%;
       height: 100%;
     }
